Implement VM Template Handler and OS Variant autocomplete
